--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <h1>
         Hello World
     </h1>
-    
+    <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos quod iure fuga qui ipsam. Atque ipsum dolorum ut quibusdam? Temporibus voluptas optio, accusamus similique reiciendis saepe amet architecto quidem consequatur!
+
+    </p>
 </body>
 </html>
