--- a/index.html
+++ b/index.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>934-206 Web Programming: Thanakrit Yongpraderm 6540011021</title>
-</head>
-<body>
-    <h1>
-        Hello World
-    </h1>
+  </head>
+  <body>
+    <h1>Hello World</h1>
     <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos quod iure fuga qui ipsam. Atque ipsum dolorum ut quibusdam? Temporibus voluptas optio, accusamus similique reiciendis saepe amet architecto quidem consequatur!
-
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos quod
+      iure fuga qui ipsam. Atque ipsum dolorum ut quibusdam? Temporibus voluptas
+      optio, accusamus similique reiciendis saepe amet architecto quidem
+      consequatur!
     </p>
-</body>
+  </body>
 </html>
