--- a/index.html
+++ b/index.html
@@ -1,17 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>934-206 Web Programming: Thanakrit Yongpraderm 6540011021</title>
-  </head>
-  <body>
-    <h1>Hello World</h1>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Thanakrit Yongpraderm 021</title>
+</head>
+<body>
+    <h1>Portforio</h1>
+    <H2>นายธนกฤต ยงประเดิม 6540011021</H2>
     <p>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos quod
-      iure fuga qui ipsam. Atque ipsum dolorum ut quibusdam? Temporibus voluptas
-      optio, accusamus similique reiciendis saepe amet architecto quidem
-      consequatur!
+        นักศึกษา คณะวิทยาศาสตร์และเทคโนโลยีอุตสาหกรรม สาขา เทคโนโลยีสารสนเทศ 
+        มหาวิทยาลัยสงขลานครินทร์ วิทยาเขต สุราษฎ์ธานี
     </p>
-  </body>
+    <p>
+        แฟ้มสะสมผลงานนี้เป็นแฟ้มสะสมผลงานสำหรับ รายวิชา Web Programming (934-206)
+    </p>
+
+    <h1>Exercise</h1>
+    <ul>
+        <li><a href="week1_021/400755596_1319673042009704_1333393095426328749_n.jpg">Ex1.ยกตัวอย่างเว็บไซต์ที่ชื่นชอบและตั้งค่าถามนำว่า เว็บไซต์ทำงานอย่างไร</a></li>
+        <li><a href="ex2.html">Ex2.เมนูอาหารที่ชื่นชอบ</a></li>
+        <li><a href="Ex3_021_025.html">Ex3.ฟอร์มลงทะเบียนศิษย์เก่า IT+IS</a></li>
+        
+    </ul>
+    
+
+</body>
 </html>
