--- a/index.html
+++ b/index.html
@@ -1,29 +1,70 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Thanakrit Yongpraderm 021</title>
-</head>
-<body>
+    <link rel="stylesheet" href="style.css">
+    <style>
+        body{
+            font-size: 18px;
+        }
+        p{
+            font-size: 2em;
+        }
+      h1 {
+        color: rgb(119, 9, 245);
+        font-family: "Times New Roman", Times, serif;
+        font-size: 48px;
+      }
+      .renji {
+        color: red;
+        font-size: 36px;
+      }
+      .koko{
+        color:darkkhaki;
+        font-size: 2em; 
+        ;
+      }
+      #footer{
+        background-color:bisque;
+      }
+      .para{
+        font-size: 2rem;
+      }
+    </style>
+  </head>
+  <body>
     <h1>Portforio</h1>
-    <H2>นายธนกฤต ยงประเดิม 6540011021</H2>
-    <p>
-        นักศึกษา คณะวิทยาศาสตร์และเทคโนโลยีอุตสาหกรรม สาขา เทคโนโลยีสารสนเทศ 
-        มหาวิทยาลัยสงขลานครินทร์ วิทยาเขต สุราษฎ์ธานี
+    <h2>นายธนกฤต ยงประเดิม 6540011021</h2>
+    <p class="koko">
+      นักศึกษา คณะวิทยาศาสตร์และเทคโนโลยีอุตสาหกรรม สาขา เทคโนโลยีสารสนเทศ
+      มหาวิทยาลัยสงขลานครินทร์ วิทยาเขต สุราษฎ์ธานี
     </p>
     <p>
-        แฟ้มสะสมผลงานนี้เป็นแฟ้มสะสมผลงานสำหรับ รายวิชา Web Programming (934-206)
+      แฟ้มสะสมผลงานนี้เป็นแฟ้มสะสมผลงานสำหรับ รายวิชา Web Programming (934-206)
     </p>
 
-    <h2>Exercise</h2>
+    <h3>Exercise</h3>
     <ul>
-        <li><a href="week1_021/400755596_1319673042009704_1333393095426328749_n.jpg">Ex1.ยกตัวอย่างเว็บไซต์ที่ชื่นชอบและตั้งค่าถามนำว่า เว็บไซต์ทำงานอย่างไร</a></li>
-        <li><a href="ex2.html">Ex2.เมนูอาหารที่ชื่นชอบ</a></li>
-        <li><a href="Ex3_021_025.html">Ex3.ฟอร์มลงทะเบียนศิษย์เก่า IT+IS</a></li>
-        
+      <li>
+        <a href="week1_021/400755596_1319673042009704_1333393095426328749_n.jpg"
+          >Ex1.ยกตัวอย่างเว็บไซต์ที่ชื่นชอบและตั้งค่าถามนำว่า
+          เว็บไซต์ทำงานอย่างไร</a
+        >
+      </li>
+      <li><a href="ex2.html">Ex2.เมนูอาหารที่ชื่นชอบ</a></li>
+      <li><a href="Ex3_021_025.html">Ex3.ฟอร์มลงทะเบียนศิษย์เก่า IT+IS</a></li>
     </ul>
-    
 
-</body>
+    <div id ="footer">
+      <h1 class="renji">Cantact Me</h1>
+      <p>
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Commodi illum
+        eius non voluptatum hic suscipit, temporibus architecto vel sequi
+        nostrum ullam, pariatur sint! Adipisci, quas perspiciatis maiores magnam
+        nam deserunt? </p>
+    </div>
+    <h1 class="renji">Cantact Me</h1>
+  </body>
 </html>
