--- a/index.html
+++ b/index.html
@@ -55,7 +55,8 @@
       </li>
       <li><a href="ex2.html">Ex2.เมนูอาหารที่ชื่นชอบ</a></li>
       <li><a href="Ex3_021_025.html">Ex3.ฟอร์มลงทะเบียนศิษย์เก่า IT+IS</a></li>
-    </ul>
+      <li><a href="bootstrap.html">Ex4.bootstrap</a></li>
+    </ul>101010110
 
     <div id ="footer">
       <h1 class="renji">Cantact Me</h1>
