--- a/bootstrap.html
+++ b/bootstrap.html
@@ -32,7 +32,7 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-              <!-- s ซ้าย , e ขวา , t บน , b ล่าง -->
+             
               <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="#"
                   >หน้าแรก</a
@@ -65,7 +65,7 @@
           <button type="button" class="btn mybtn">Get to know me</button>
         </div>
         <div class="col-8">
-          <img src="/images/what.JPG" width="300px" height="300px" class="img-fluid" alt="..." />
+          <img src="images/what.JPG" width="300px" height="300px" class="img-fluid" alt="..." />
         </div>
       </div>
       <div class="row portfolio pt-5 mt-5">
@@ -97,7 +97,7 @@
       <h1 class="bluetopic text-center mt-5">Academic Services</h1>
       <div class="figure-container mt-5">
         <figure class="figure">
-            <img src="/images/DataAnalytic.png" width="300px" class="figure-img img-fluid rounded" alt="...">
+            <img src="images/DataAnalytic.png" width="300px" class="figure-img img-fluid rounded" alt="...">
             <figcaption class="figure-caption">category 19 JAN 2024</figcaption>
             <div>
                 <h5>Dijital Marketing</h5>
@@ -108,7 +108,7 @@
         </figure>
     
         <figure class="figure">
-          <img src="/images/DataAnalytic.jpg" width="300px" class="figure-img img-fluid rounded" alt="...">
+          <img src="images/DataAnalytic.jpg" width="300px" class="figure-img img-fluid rounded" alt="...">
           <figcaption class="figure-caption">category 19 JAN 2024</figcaption>
           <div>
               <h5>Data Analytic</h5>
@@ -119,7 +119,7 @@
         </figure>
 
         <figure class="figure">
-          <img src="/images/BusinessIntellegence.png" width="280px" height="200px" class="figure-img img-fluid rounded" alt="...">
+          <img src="images/BusinessIntellegence.png" width="280px" height="200px" class="figure-img img-fluid rounded" alt="...">
           <figcaption class="figure-caption">category 19 JAN 2024</figcaption>
           <div>
               <h5>Business Intellegence</h5>
@@ -130,7 +130,7 @@
         </figure>
 
         <figure class="figure">
-          <img src="/images/SoftwareDevelopment.jpg" width="300px" class="figure-img img-fluid rounded" alt="...">
+          <img src="images/SoftwareDevelopment.jpg" width="300px" class="figure-img img-fluid rounded" alt="...">
           <figcaption class="figure-caption">category 19 JAN 2024</figcaption>
           <div>
               <h5>Software Development</h5>
