--- a/index.html
+++ b/index.html
@@ -56,6 +56,8 @@
       <li><a href="ex2.html">Ex2.เมนูอาหารที่ชื่นชอบ</a></li>
       <li><a href="Ex3_021_025.html">Ex3.ฟอร์มลงทะเบียนศิษย์เก่า IT+IS</a></li>
       <li><a href="bootstrap.html">Ex4.bootstrap</a></li>
+      <li><a href="testjs.html">Ex5.Check Form Login</a></li>
+
     </ul>101010110
 
     <div id ="footer">
