--- a/ex2.html
+++ b/ex2.html
@@ -13,7 +13,7 @@
     
     <h2>วัตถุดิบผัดพริกแกงหมู</h2>
     <table border="2">
-        <tr>
+        <tr >
             <td>วัตถุดิบ</td>
             <td>ปริมาณ</td>
         </tr>
@@ -53,7 +53,7 @@
 
 
 
-    <h2>วิธีทำผัดพริกแกงหมู</h2>
+    <h2 class="vttum">วิธีทำผัดพริกแกงหมู</h2>
     <ol>
         <li>ตั้งกระทะใส่น้ำมันพืชลงไป พอร้อนใส่น้ำพริกแกงลงไปผัดพอหอม</li>
         <li>ใส่หมูลงไปผัดจนสุก ใส่ถั่วฝักยาวผัดตามชอบ</li>
