--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                     <div class="card col-4" style="width: 18rem;">
                         <img src="image/catclick.gif" class="card-img-top" alt="...">
                         <div class="card-body">
-                          <h5 class="card-title">Exercises4</h5>
+                          <h5 class="card-title">Exercises.4</h5>
                           <p class="card-text">Bootstap</p>
                           <a href="bootstrap.html" class="btn btn-primary" style="background-color: lightpink;">View</a>
                         </div>
